--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "mongoose": "^6.4.4",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.7",
+    "swagger-ui-express": "^4.5.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
